--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -84,11 +84,15 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BaseNotify.cs" />
+    <Compile Include="Charts\ChartMaster.cs" />
     <Compile Include="Charts\JenisKekerasanyangDialamiKorban.xaml.cs">
       <DependentUpon>JenisKekerasanyangDialamiKorban.xaml</DependentUpon>
     </Compile>
     <Compile Include="Charts\JumlahKasusberdasarkanTempatKejadian.xaml.cs">
       <DependentUpon>JumlahKasusberdasarkanTempatKejadian.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Charts\JumlahKorbanberdasarkanTempatKejadian.xaml.cs">
+      <DependentUpon>JumlahKorbanberdasarkanTempatKejadian.xaml</DependentUpon>
     </Compile>
     <Compile Include="Charts\KorbanBerdasarkanPendidikan.xaml.cs">
       <DependentUpon>KorbanBerdasarkanPendidikan.xaml</DependentUpon>
@@ -170,6 +174,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Charts\JumlahKasusberdasarkanTempatKejadian.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Charts\JumlahKorbanberdasarkanTempatKejadian.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
