--- a/Main/packages.config
+++ b/Main/packages.config
@@ -5,5 +5,6 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net45" />
   <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net461" />
+  <package id="ResponsiveGrid" version="0.3.3" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.110.0" targetFramework="net461" />
 </packages>
