--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -61,17 +61,9 @@
       <HintPath>packages\MaterialDesignThemes.2.5.1\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.ReportViewer.Runtime.Common.12.0.2402.15\lib\Microsoft.ReportViewer.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ReportViewer.DataVisualization, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.ReportViewer.Runtime.Common.12.0.2402.15\lib\Microsoft.ReportViewer.DataVisualization.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.ReportViewer.ProcessingObjectModel, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.ReportViewer.Runtime.Common.12.0.2402.15\lib\Microsoft.ReportViewer.ProcessingObjectModel.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.ReportViewer.Runtime.WinForms.12.0.2402.15\lib\Microsoft.ReportViewer.WinForms.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>packages\Microsoft.ReportingServices.ReportViewerControl.Winforms.150.1357.0\lib\net40\Microsoft.ReportViewer.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.SqlServer.Types, Version=14.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.SqlServer.Types.14.0.1016.290\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
@@ -222,6 +214,7 @@
     </Compile>
     <Compile Include="Reports\Models\CiriTerlapor.cs" />
     <Compile Include="Reports\Models\CiriKorbanDanPelaku.cs" />
+    <Compile Include="Reports\Models\GrafikModel.cs" />
     <Compile Include="Reports\Models\Kekerasandll.cs" />
     <Compile Include="Reports\Models\KorbanAnakDewasaTerlayani.cs" />
     <Compile Include="Reports\Models\ReportHeader.cs" />
@@ -514,11 +507,15 @@
     <EmbeddedResource Include="Reports\Layout\CiriTerlapor.rdlc" />
     <EmbeddedResource Include="Reports\Layout\DewasaAnakTerlayani.rdlc" />
     <EmbeddedResource Include="Reports\Layout\GenderTelayani.rdlc" />
+    <EmbeddedResource Include="Reports\Layout\GrafikBarLayout.rdlc" />
+    <EmbeddedResource Include="Reports\Layout\GrafikRatioSeries.rdlc" />
+    <EmbeddedResource Include="Reports\Layout\GrafikMultiSeries.rdlc" />
     <EmbeddedResource Include="Reports\Layout\Kekerasandll.rdlc" />
     <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\Main.Reports.Models.CiriKorbanDanPelaku.datasource" />
     <None Include="Properties\DataSources\Main.Reports.Models.CiriTerlapor.datasource" />
+    <None Include="Properties\DataSources\Main.Reports.Models.GrafikModel.datasource" />
     <None Include="Properties\DataSources\Main.Reports.Models.KasusDanKorbanTerlayani.datasource" />
     <None Include="Properties\DataSources\Main.Reports.Models.Kekerasandll.datasource" />
     <None Include="Properties\DataSources\Main.Reports.Models.KorbanAnakDewasaTerlayani.datasource" />
@@ -542,6 +539,8 @@
     <Resource Include="Images\man.png" />
     <Resource Include="Images\women.png" />
     <Resource Include="Images\Case.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
