--- a/Main/app.config
+++ b/Main/app.config
@@ -47,6 +47,22 @@
   
             </dependentAssembly>
   
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.ReportViewer.ProcessingObjectModel" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="Microsoft.ReportViewer.DataVisualization" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+  
+            </dependentAssembly>
+  
        </assemblyBinding>
   
   </runtime>
